--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Puzzledroid">
         <activity
+            android:name=".AyudaActivity"
+            android:exported="true" />
+        <activity
             android:name=".JuegoActivity"
             android:exported="true" />
         <activity
@@ -25,5 +28,8 @@
             </intent-filter>
         </activity>
     </application>
+
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 </manifest>
