--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.puzzledroid">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Puzzledroid">
+        <activity
+            android:name=".HacerFotos"
+            android:exported="true" />
         <activity
             android:name=".WinActivity"
             android:exported="true" />
@@ -47,11 +54,14 @@
             </intent-filter>
         </activity>
 
+
+        
+
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-    </application>
+            android:resource="@array/preloaded_fonts"
+            />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    </application>
 
 </manifest>
