--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".WinActivity"
             android:exported="true" />
         <activity
+            android:name=".JuegoFromPhoto"
+            android:exported="true" />
+        <activity
             android:name=".Juego3Activity"
             android:exported="true" />
         <activity
@@ -53,5 +56,7 @@
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
 
 </manifest>
