--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -45,6 +46,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.ramijemli:easings:1.0.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
 
     kapt 'com.jakewharton:butterknife-compiler:10.0.0'
     
